# TensorRT-LLM

./: .gitignore  .gitmodules  Dockerfile.python  README.md  build_python_changes.sh  extra-llm-api-config.yml  requirements.txt
.devcontainer/: docker-compose.yml
cpp/kernels/fmha_v2/: setup.py
cpp/tensorrt_llm/batch_manager/: cacheFormatter.cpp  cacheTransceiver.cpp  dataTransceiver.cpp  evictionPolicy.cpp  kvCacheManager.cpp  kvCacheTransferManager.cpp  microBatchScheduler.cpp  trtGptModelInflightBatching.cpp
cpp/tensorrt_llm/common/: attentionOp.cpp  attentionOp.h
cpp/tensorrt_llm/executor/: guidedDecodingParams.cpp  serialization.cpp
cpp/tensorrt_llm/kernels/: FusedMqaLogitsTopK.h  banBadWords.cu  beamSearchKernels.h  decodingCommon.cu  decodingCommon.h  decodingKernels.cu  fmhaDispatcher.cpp  fusedMqaLogitsTopK.cu  fusedMqaLogitsTopK.cuh  mlaChunkedPrefill.cu  mlaKernels.cu  noAuxTcKernels.cu  penaltyKernels.cu
cpp/tensorrt_llm/layers/: baseSamplingLayer.h  beamSearchLayer.cu  beamSearchLayer.h  decodingLayer.cpp  decodingParams.h  dynamicDecodeLayer.cpp  dynamicDecodeLayer.h  explicitDraftTokensLayer.h  externalDraftTokensLayer.cpp  medusaDecodingLayer.h  penaltyLayer.cpp  samplingLayer.cpp  samplingParams.h  topPSamplingLayer.h
cpp/tensorrt_llm/runtime/: gptDecoder.cpp  gptDecoderBatch.cpp  gptDecoderBatched.cpp  statefulGptDecoder.cpp
cpp/tensorrt_llm/thop/: CMakeLists.txt  FusedMqaLogitsTopKOp.cpp  allreduceOp.cpp  dynamicDecodeOp.cpp  dynamicDecodeOp.h  fp4BlockScaleMoe.cpp  fp8BlockScaleMoe.cpp  mtpOp.cpp  specDecOp.cpp
cpp/tests/layers/: dynamicDecodeLayerTest.cpp  dynamicDecodeLayerTest.h  medusaDecodeLayerTest.cpp  medusaDecodeLayerTest.h
docker/: Dockerfile.multi  Makefile
docker/common/: install_mpi4py.sh  install_tensorrt.sh
docs/source/reference/: support-matrix.md
examples/: mmlu.py
examples/apps/: fastapi_server.py
examples/dbrx/: convert_checkpoint.py
examples/quantization/: quantize.py
jenkins/: L0_MergeRequest.groovy  L0_Test.groovy
tensorrt_llm/: _utils.py  executor.py  sampling_params.py
tensorrt_llm/_torch/: model_config.py  utils.py
tensorrt_llm/_torch/attention_backend/: flashinfer.py  interface.py  trtllm.py  utils.py
tensorrt_llm/_torch/custom_ops/: cpp_custom_ops.py  torch_custom_ops.py  trtllm_gen_custom_ops.py
tensorrt_llm/_torch/modules/: mla.py  (+7 more)
tensorrt_llm/commands/: build.py  serve.py
tensorrt_llm/evaluate/: lm_eval.py
tensorrt_llm/executor/: base_worker.py  ipc.py  postproc_worker.py  proxy.py  result.py  worker.py
tensorrt_llm/inputs/: multimodal.py
tensorrt_llm/llmapi/: llm.py  llm_args.py  llm_utils.py  tokenizer.py
tensorrt_llm/metrics/: enums.py
tensorrt_llm/models/: __init__.py
tensorrt_llm/quantization/: quantize_by_modelopt.py
tensorrt_llm/serve/: bufferer.py  kv_events_config.py  kv_zmq_publisher.py  openai_protocol.py  openai_server.py  postprocess_handlers.py
tensorrt_llm/serve/kv_local_indexer/: .gitignore  Cargo.toml  README.md  build_wheel.sh  pyproject.toml  rust-toolchain.toml
tensorrt_llm/serve/kv_local_indexer/src/: lib.rs
tensorrt_llm/tokenizer/: tokenizer.py
tensorrt_llm/usage/: llm_args_golden_manifest.json
wheels/: kv_local_indexer-0.1.0-cp312-cp312-linux_x86_64.whl
(+156 files in other folders)
