[package]
name = "kv-local-indexer"
version = "0.1.0"
edition = "2021"
description = "PyO3 wrapper around Dynamo's LocalKvIndexer for the TRT-LLM worker"
license = "Apache-2.0"

[lib]
name = "kv_local_indexer"
# cdylib: build a Python extension module (.so). No rlib needed.
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.22", features = ["extension-module"] }
tokio = { version = "1", features = ["rt-multi-thread", "sync"] }
tokio-util = "0.7"
serde_json = "1"

# Dynamo's KV indexer, used UNMODIFIED. Pinned to a PUBLIC upstream commit so the
# build needs NO local dynamo checkout -- cargo fetches it. This rev is the exact
# upstream `main` commit the wheel is built against.
#
# default-features = false: we compile ONLY the in-process indexer + protocols
# (indexer::LocalKvIndexer, protocols, zmq_wire::convert). The `standalone-indexer`
# feature is OFF, so none of the deepinfra-fork changes (which live entirely under
# that feature) are compiled here -- upstream at this rev is byte-identical to the
# fork for what this wrapper builds.
#
# For local dev against a sibling checkout, temporarily swap to:
#   dynamo-kv-router = { path = "../../../../dynamo/lib/kv-router", default-features = false }
dynamo-kv-router = { git = "https://github.com/ai-dynamo/dynamo.git", rev = "b2b7868090a22e02a0cf5733eea7d53e8e0f0829", default-features = false }

[profile.release]
opt-level = 3
